--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ais-ecommerce-demo-app",
+  "name": "algolia tg all 04122021",
   "version": "1.0.0",
   "private": true,
   "scripts": {
